Refactor agent and application pages to enhance UI consistency and remove inline MCP management